--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -158,6 +158,12 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="MoneroText.PosPocketChange">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">?attr/positiveColor</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <style name="MoneroText.PosNote">
         <item name="android:textSize">12sp</item>
         <!--item name="android:textColor">#FF4A4A4A</item-->
