show PC on btc confirm

--- a/app/src/main/res/layout/fragment_send_btc_confirm.xml
+++ b/app/src/main/res/layout/fragment_send_btc_confirm.xml
@@ -170,6 +170,31 @@
                 android:visibility="invisible">
 
                 <LinearLayout
+                    android:id="@+id/llPocketChange"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <TextView
+                        style="@style/MoneroLabel.Gray"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/pocketchange_title"
+                        android:textAlignment="textStart" />
+
+                    <TextView
+                        android:id="@+id/tvTxChange"
+                        style="@style/MoneroText.Gray"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:textAlignment="textEnd"
+                        tools:text="143.008000000000" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -182,8 +207,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/send_fee_btc_label"
-                        android:textAlignment="textStart"
-                        android:textSize="16sp" />
+                        android:textAlignment="textStart" />
 
                     <TextView
                         android:id="@+id/tvTxFee"
@@ -192,7 +216,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:textAlignment="textEnd"
-                        android:textSize="16sp"
                         tools:text="0.006817000000" />
                 </LinearLayout>
 
@@ -209,8 +232,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/send_total_btc_label"
-                        android:textAlignment="textStart"
-                        android:textSize="16sp" />
+                        android:textAlignment="textStart" />
 
                     <TextView
                         android:id="@+id/tvTxTotal"
@@ -219,7 +241,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:textAlignment="textEnd"
-                        android:textSize="16sp"
                         tools:text="143.014817000000" />
                 </LinearLayout>
             </LinearLayout>
