--- a/app/src/main/res/values-fa/about.xml
+++ b/app/src/main/res/values-fa/about.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="fa">
     <string name="about_close">بستن</string>
     <string name="about_whoami">من مونروجو هستم</string>
     <string name="about_version">
