--- a/app/src/main/res/values/help.xml
+++ b/app/src/main/res/values/help.xml
@@ -152,59 +152,48 @@
     <string name="help_send"><![CDATA[
         <h1>Send</h1>
         <h2>Receiver’s address</h2>
-        <p>This is the public address of the wallet you are sending Moneroj to, you can copy this from
+        <p>This is the public address of the wallet you are sending to, you can paste it from
         your clipboard, scan a QR code or enter it manually. Make sure you triple check this to
-        ensure you aren’t sending coins to the wrong address.</p>
+        ensure you aren’t sending coins to the wrong address, once sent is not possible to reverse it.</p>
         <p>In addition to using an XMR address, you can also use
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
+            <li>An <a href="https://openalias.org/">OpenAlias</a> for XMR or BTC</li>
+            <li>Another crypto address</li>
         </u>
-        Please note, that sending BTC is processed through the SideShift.ai service (see https://sideshift.ai
-        for details). See the section on sending BTC below.</p>
-        <h1>Sending BTC</h1>
-        <h2>SideShift.ai</h2>
-        <p>SideShift.ai is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the SideShift.ai API to integrate Bitcoin payments into Monerujo. Please check out
-        https://sideshift.ai and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with SideShift.ai and cannot help you with their service.</p>
-        <h2>SideShift.ai Exchange Rate<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the SideShift.ai service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point.</p>
-        <h2>SideShift.ai Order<h2>
-        <p>On the \"Confirm\" screen, you will see the actual SideShift.ai order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>SideShift.ai Secret Key<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your SideShift.ai secret key
-        can be used to track the Bitcoin part of your order on the SideShift.ai homepage.</p>
-        <h2>SideShift.ai Countdown!</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from SideShift.ai by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
+		</p>
+        <h2>Converting XMR</h2>
+        <p>Conversion into another crypto is processed through an external exchange service. Monerujo doesn't run or is associated with these third parties, therefore cannot help you with their service, but will provide you with the information required to get support from them.</p>
+        <h2>Available XMR pairs</h2>
+		<p>Monerujo supports conversion form XMR to the following coins:
+		<ul>
+			<li>Bitcoin (BTC)</li>
+			<li>Ethereum (ETH)</li>
+			<li>Litecoin (LTC)</li>
+			<li>Dash (DASH)</li>
+			<li>Dai (DAI) on Ethereum</li>
+			<li>Tether (USDT) on Ethereum</li>
+		</ul>
+		Just add a matching address or select the desired coin by picking on its icon.</p>
     ]]></string>
 
     <string name="help_xmrto"><![CDATA[
-        <h1>Sending BTC</h1>
-        <h2>SideShift.ai</h2>
-        <p>SideShift.ai is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the SideShift.ai API to integrate Bitcoin payments into Monerujo. Please check out
-        https://sideshift.ai and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with SideShift.ai and cannot help you with their service.</p>
-        <h2>SideShift.ai Exchange Rate<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the SideShift.ai service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point.</p>
-        <h2>SideShift.ai Order<h2>
-        <p>On the \"Confirm\" screen, you will see the actual SideShift.ai order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>SideShift.ai Secret Key<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your SideShift.ai secret key
-        can be used to track the Bitcoin part of your order on the SideShift.ai homepage.</p>
-        <h2>SideShift.ai Countdown!</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from SideShift.ai by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
+        <h1>Converting XMR</h1>
+        <h2>Amounts<h2>
+        <p>Enter on the \"Amount\" field the amount of cryptocurrency you want to send. By default, it will show you the equivalent amount of XMR to be sent from your wallet. You can pick a different currency from the dropdown if you want to fix your amount on it. Monerujo uses a fixed rate, so at the end of the process you should get the exact amount you specify here.</p> 
+		<h2>Exchange rate</h2>
+        <p>Below you will see the current rate provided by the exchange, along with their lower and upper limits. Please note that this rate is not guaranteed at this point, it will be set the moment your transaction is ready to be approved on the next screen.</p>
+	]]></string>
+	
+	<string name="help_confirm"><![CDATA[
+        <h1>Exchange Order<h1>
+        <p>On this screen you will see the actual exchange order. This order is valid for
+        a limited time - you may notice a countdown on the \"Spend\" button. This exchange rate may
+        be different to the one shown on previous screens, but as long as you accept before the time runs out, it'll be fixed.</p>
+        <h2>Order Number<h2>
+        <p>Since Monerujo only handles the XMR side of your transaction, your <em>order number</em> can be used to track or get support for your order on the exchange's website.</p>
+        <h2>Countdown is over</h2>
+        <p>Once the countdown reaches zero, you need to get a new quote from the exchange by going back to the
+        previous screen, and then coming back to this screen.</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
