--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,6 +18,9 @@
         <item>CHF</item>
         <item>CAD</item>
 
+        <!-- shitcoins are marked with a zero width space at the end (U+200B) -->
+        <!-- this is a hack to avoid having different arrays, i.e. shitcoins have 4 charatcers -->
+        <item>ARS​</item>
         <item>AUD</item>
         <item>BGN</item>
         <item>BRL</item>
@@ -29,8 +32,10 @@
         <item>IDR</item>
         <item>ILS</item>
         <item>INR</item>
+        <item>IRR​</item>
         <item>ISK</item>
         <item>KRW</item>
+        <item>LBP​</item>
         <item>MXN</item>
         <item>MYR</item>
         <item>NOK</item>
@@ -38,18 +43,14 @@
         <item>PHP</item>
         <item>PLN</item>
         <item>RON</item>
+        <item>RSD​</item>
+        <item>RUB​</item>
         <item>SEK</item>
         <item>SGD</item>
         <item>THB</item>
         <item>TRY</item>
-        <item>ZAR</item>
-        <!-- shitcoins are marked with a zero width space at the end (U+200B) -->
-        <!-- this is a hack to avoid having different arrays, i.e. shitcoins have 4 charatcers -->
-        <item>ARS​</item>
-        <item>IRR​</item>
-        <item>LBP​</item>
-        <item>RUB​</item>
         <item>VES​</item>
+        <item>ZAR</item>
     </string-array>
 
 </resources>
