improve some lines & fix out of context words

--- a/app/src/main/res/values-ar/help.xml
+++ b/app/src/main/res/values-ar/help.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources tools:locale="ar" xmlns:tools="http://schemas.android.com/tools">
   <string name="help_create_new"><![CDATA[
-<h1> إنشاء محفظة - جديد </h1>
+<h1> إنشاء محفظة - جديده </h1>
  <p> إذا كنت بحاجة إلى عنوان Monero جديد! </p>
  <p> أدخل اسم المحفظة وكلمة المرور.
  يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز. استخدم كلمة مرور قوية -
@@ -116,8 +116,8 @@
   <string name="help_send"><![CDATA[
 <h1> أرسل </h1>
  <h2> عنوان المستلم </h2>
- <p> عنوان العام للمحفظة التي ترسل إليها، يمكنك لصقه منه
- الحافظة الخاصة بك، أو قم بمسح رمز الاستجابة السريعة ضوئيًا أو أدخله يدويًا. تأكد من التحقق من ذلك ثلاث مرات
+ <p> عنوان العام للمحفظة التي ترسل إليها، يمكنك لصقه من
+ الحافظة، أو قم بمسح رمز الاستجابة السريعة ضوئيًا أو أدخله يدويًا. تأكد من التحقق من ذلك ثلاث مرات
  تأكد من أنك لا ترسل العملات المشفرة إلى عنوان خاطئ، فبمجرد إرسالها لا يمكن التراجع عنها (عليك العوض). </p>
  <p> بالإضافة إلى استخدام عنوان XMR، يمكنك أيضًا استخدام
  <ul>
@@ -155,7 +155,7 @@
  <p> عندما يصل العد التنازلي إلى الصفر، يجب عليك الحصول على عرض سعر جديد من البورصة عن طريق العودة إلى الشاشة السابقة، ثم العودة إلى هذه الشاشة. </p>
 ]]></string>
   <string name="help_wallet"><![CDATA[
-<h1> الحافظة </h1>
+<h1> المحفظة </h1>
  <h2> وضع الشارع </h2>
  <p> يمكن تفعيل/تعطيل وضع الشارع من القائمة أو من خلال أيقونة رأس Gunther. في هذا الوضع، لن يظهر رصيدك
  على أي شاشة، مما يتيح لك استخدام المحفظة بأمان في الشارع، أو البار، أو
@@ -167,13 +167,13 @@
 تخزن معلومات محفظتك على هاتفك فقط لذا قد يستغرق الأمر بعض الوقت
  إذا لم تقم بالمزامنة لفترة طويلة.
  <h2> الرصيد </h2>
- <p> <b> متخفش يسطي! رصيد محفظتي اختفى أو لم يتم تأكيده! </b> <br/>
+ <p> <b> لا تقلق يا صديقي! رصيد محفظتي اختفى أو لم يتم تأكيده! </b> <br/>
  لا تقلق! عندما ترسل أموالًا من محفظتك، قد يظهر جزء من رصيدك مؤقتًا
  كغير مؤكد.
  هذا يحدث بسبب طريقة تبادل Monero على البلوكشين وكيفية عمل الفكة.
  يمكنك قراءة المزيد حول الفكة على https://getmonero.org/resources/moneropedia/change.html
  <h2> قائمة المعاملات </h2>
- <p> قائمة بمعاملات الحافظة. في قائمة الحافظات، يتم عرض المعاملات الواردة فقط. </p>
+ <p> قائمة بمعاملات المحفظة. في قائمة المحافظ، يتم عرض المعاملات الواردة فقط. </p>
 ]]></string>
   <string name="help_node"><![CDATA[
 <h1> العقد </h1>
@@ -231,7 +231,7 @@
  </p>
  <p> ستتم ملء تفاصيل الدفع تلقائياً. تأكد من صحتها ثم اتبع الإجراءات المعتادة لإجراء أي معاملة. </p>
 ]]></string>
-  <string name="help_ok">اشطا!</string>
+  <string name="help_ok">حسنا!</string>
   <string name="help_nok">ممم... لا</string>
   <string name="help_getorbot">احصل على Orbot!</string>
   <string name="help_tor"><![CDATA[
